Got put to work,

--- a/views/products/index.hbs
+++ b/views/products/index.hbs
@@ -1,1 +1,12 @@
-<h1>INDEX</h1>
+<p>Index Page</p>
+{{#each products}}
+<div class="products">
+
+
+<h1>Name:{{name}}</h1>
+<p> ID:{{id}}</p>
+<p> Price:{{price}}</p>
+<p> Inventory:{{inventory}}</p>
+</div>
+
+{{/each}}
