--- a/views/products/product.hbs
+++ b/views/products/product.hbs
@@ -1,1 +1,10 @@
-<h1>Product</h1>
+{{#if products}}
+<<div class="product">
+  <h1>Name: {{product.name}}</h1>
+  <h2>ID : {{product.id}}</h2>
+  <h2>Price: {{price}}</h2>
+  <h2>Inventory: {{inventory}}</h2>
+</div>
+{{else}}
+  <h1>Product Not Found</h1>
+{{/if}}
