Working on making templates work for articles,
For whatever reason I can not seem to get the Templates for articles to work. not sure what I am doing wrong.

--- a/views/articles/index.hbs
+++ b/views/articles/index.hbs
@@ -1,1 +1,10 @@
-Index
+<p>Index Page</p>
+{{#each articles}}
+<div class="article">
+<h1>Title:{{articles.title}}</h1>
+<p> Body:{{body}}</p>
+<p> Author:{{author}}</p>
+
+</div>
+
+{{/each}}
