--- a/views/products/product.hbs
+++ b/views/products/product.hbs
@@ -1,10 +1,17 @@
 {{#if products}}
-<<div class="product">
-  <h1>Name: {{product.name}}</h1>
-  <h2>ID : {{product.id}}</h2>
+<div class="product">
+  <p>Products Page</p>
+  <h1>Name: {{name}}</h1>
+  <h2>ID : {{id}}</h2>
   <h2>Price: {{price}}</h2>
   <h2>Inventory: {{inventory}}</h2>
 </div>
 {{else}}
   <h1>Product Not Found</h1>
+  <form action="/products/" method="post">
+  Name: <input type="text" name="name"><br>
+  Price: <input type="text" name="price"><br>
+  Inventory <input type="text" name="inventory"><br>
+  <input type="submit" value="Submit">
+</form>
 {{/if}}
