--- a/views/products/edit.hbs
+++ b/views/products/edit.hbs
@@ -1,7 +1,7 @@
-<h1>EDIT</h1>
+<h1>Edit</h1>
 <form action="/products/:id/edit" method="put">
   ID: <input type="text" name="id"><br>
 Name: <input type="text" name="name"><br>
 
-<input type="submit" value="Submit">
+<input type="submit" value="submit">
 </form>
