changes some routes
Made itso that you can add products and see it on the same page!

--- a/views/products/edit.hbs
+++ b/views/products/edit.hbs
@@ -1,5 +1,7 @@
 <h1>Edit</h1>
-<form action="/products/:id/edit" method="put">
+
+<form action="/products/:id/edit" method="post">
+  <input type="hidden" name="_method" value="PUT">
   ID: <input type="text" name="id"><br>
 Name: <input type="text" name="name"><br>
 
