--- a/views/products/index.hbs
+++ b/views/products/index.hbs
@@ -1,4 +1,12 @@
 <p>Index Page</p>
+
+<form action="/products" method="post">
+Name: <input type="text" name="name"><br>
+Price: <input type="text" name="price"><br>
+Inventory <input type="text" name="inventory"><br>
+<input type="submit" value="Submit">
+</form>
+
 {{#each products}}
 <div class="products">
 
