--- a/views/products/product.hbs
+++ b/views/products/product.hbs
@@ -1,10 +1,10 @@
 {{#if products}}
 <div class="product">
   <p>Products Page</p>
-  <h1>Name: {{name}}</h1>
-  <h2>ID : {{id}}</h2>
-  <h2>Price: {{price}}</h2>
-  <h2>Inventory: {{inventory}}</h2>
+  <h1>Name: {{products.name}}</h1>
+  <h2>ID : {{products.id}}</h2>
+  <h2>Price: {{products.price}}</h2>
+  <h2>Inventory: {{products.inventory}}</h2>
 </div>
 {{else}}
   <h1>Product Not Found</h1>
