fixed articles so we can use titles to find stuff

--- a/views/articles/article.hbs
+++ b/views/articles/article.hbs
@@ -1,8 +1,8 @@
 {{#if articles}}
-<<div class="article">
-  <h1>Title: {{title}}</h1>
-  <h2>Body : {{body}}</h2>
-  <h2>Author: {{author}}</h2>
+<div class="article">
+  <h1>Title: {{articles.title}}</h1>
+  <h2>Body : {{articles.body}}</h2>
+  <h2>Author: {{articles.author}}</h2>
 
 </div>
 {{else}}
