--- a/views/products/edit.hbs
+++ b/views/products/edit.hbs
@@ -1,9 +1,18 @@
 <h1>Edit</h1>
+{{#if products}}
 
-<form action="/products/:id/edit" method="post">
+  <form method="POST" action="?_method=PUT">
   <input type="hidden" name="_method" value="PUT">
   ID: <input type="text" name="id"><br>
 Name: <input type="text" name="name"><br>
-
 <input type="submit" value="submit">
 </form>
+{{else}}
+<h1>Product Not Found</h1>
+<form action="/products/" method="post">
+Name: <input type="text" name="name"><br>
+Price: <input type="text" name="price"><br>
+Inventory <input type="text" name="inventory"><br>
+<input type="submit" value="Submit">
+</form>
+{{/if}}
