changes to views

--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,7 +1,7 @@
-<p>New</p>
+<h1>Add A New Product</h1>
 <form action="/products" method="post">
-Name: <input type="text" name="name"><br>
-Price: <input type="text" name="price"><br>
-Inventory <input type="text" name="inventory"><br>
-<input type="submit" value="Submit">
+  Name: <input type="text" name="name"><br>
+  Price: <input type="text" name="price"><br>
+  Inventory <input type="text" name="inventory"><br>
+  <input type="submit" value="Submit">
 </form>
