--- a/views/products/product.hbs
+++ b/views/products/product.hbs
@@ -1,7 +1,7 @@
 {{#if products}}
 <div class="product">
-  <p>Products Page</p>
-  <h1>Name: {{products.name}}</h1>
+  <h1>Products Page</h1>
+  <h2>Name: {{products.name}}</h2>
   <h2>ID : {{products.id}}</h2>
   <h2>Price: {{products.price}}</h2>
   <h2>Inventory: {{products.inventory}}</h2>
@@ -9,9 +9,9 @@
 {{else}}
   <h1>Product Not Found</h1>
   <form action="/products/" method="post">
-  Name: <input type="text" name="name"><br>
-  Price: <input type="text" name="price"><br>
-  Inventory <input type="text" name="inventory"><br>
-  <input type="submit" value="Submit">
+    Name: <input type="text" name="name"><br>
+    Price: <input type="text" name="price"><br>
+    Inventory <input type="text" name="inventory"><br>
+    <input type="submit" value="Submit">
 </form>
 {{/if}}
