set up all the routes.

--- a/views/products/index.hbs
+++ b/views/products/index.hbs
@@ -1,5 +1,5 @@
 <h1>Add & View all Products</h1>
-<form action="/products" method="post">
+<form action="/products" method="POST">
   Name: <input type="text" name="name"><br>
   Price: <input type="text" name="price"><br>
   Inventory <input type="text" name="inventory"><br>
