--- a/views/products/edit.hbs
+++ b/views/products/edit.hbs
@@ -1,12 +1,15 @@
 <h1>Edit</h1>
 {{#if products}}
 
-  <form method="POST" action="?_method=PUT">
-  <input type="hidden" name="_method" value="PUT">
+  <form method="post" action="/products/0/edit" enctype="application/x-www-form-urlencoded">
+  <input type="hidden" name="_method" value="PUT" >
   ID: <input type="text" name="id"><br>
 Name: <input type="text" name="name"><br>
 <input type="submit" value="submit">
 </form>
+
+
+
 {{else}}
 <h1>Product Not Found</h1>
 <form action="/products/" method="post">
